// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`migrate-to-schema batch operation > README example: model with mixin, belongsTo, hasMany, and extension methods > readme_example 1`] = `
{
  "resources/": "__dir__",
  "resources/user.ext.ts": "
import Timestampable from '../../mixins/timestampable';
import type { User } from './user.type.ts';

// @ts-ignore-error in reality fields are not merged, they are overridden
export interface UserExtension extends User {}
export class UserExtension extends Timestampable {
  get displayName() {
      return this.name || this.email;
    }

  async updateProfile(data) {
      this.setProperties(data);
      return this.save();
    }
}

export default UserExtension;",
  "resources/user.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const UserSchema = {
  'type': 'user',
  'legacy': true,
  'identity': {
    'kind': '@id',
    'name': 'id'
  },
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    },
    {
      'kind': 'attribute',
      'name': 'email',
      'type': 'string'
    },
    {
      'kind': 'belongsTo',
      'name': 'company',
      'type': 'company',
      'options': {
        'async': false
      }
    },
    {
      'kind': 'hasMany',
      'name': 'projects',
      'type': 'project',
      'options': {
        'async': true
      }
    }
  ],
  'traits': [
    'timestampable'
  ],
  'objectExtensions': [
    'TimestampableTraitExtension'
  ]
} satisfies LegacyResourceSchema;

export default UserSchema;
",
  "resources/user.type.ts": "
import type { Type } from '@warp-drive/core-types/symbols';
import type { WithLegacy } from '@ember-data/model/migration-support';
import type { Company } from 'test-app/data/resources/company.type';
import type { Project } from 'test-app/data/resources/project.type';

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link User} for fields + legacy mode features
 */
export interface UserResource extends TimestampableTrait {
  readonly [Type]: 'user';
  id: string | null;
  name: string;
  email: string;
  company: Company;
  projects: Project[];
}

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link UserResource} for fields + legacy mode features
 */
export interface User extends WithLegacy<UserResource> {}
",
  "traits/": "__dir__",
  "traits/timestampable.ext.ts": "




import type { Timestampable } from 'test-app/data/traits/timestampable.schema';

export interface TimestampableTraitExtension extends Timestampable {}

export const TimestampableTraitExtension = {
  timeSince() {
    return Date.now() - this.updatedAt;
  }
};",
  "traits/timestampable.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

import type { DeleteableTrait } from 'test-app/data/traits/deleteable.schema';

const TimestampableTraitSchema = {
  'name': 'timestampable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'createdAt',
      'kind': 'attribute',
      'type': 'date'
    },
    {
      'name': 'updatedAt',
      'kind': 'attribute',
      'type': 'date'
    }
  ],
  'traits': [
    'deleteable'
  ]
} satisfies LegacyResourceSchema;

export default TimestampableTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'timestampable' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link Timestampable} for fields + legacy mode features
 */
export interface TimestampableTrait extends DeleteableTrait {
  createdAt?: Date | null;
  updatedAt?: Date | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'timestampable' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link TimestampableTrait} for fields + legacy mode features
 */
export interface Timestampable extends WithLegacy<TimestampableTrait> {}
",
}
`;

exports[`migrate-to-schema batch operation > README example: model with mixin, belongsTo, hasMany, and extension methods > readme_example_structure 1`] = `
[
  "resources/",
  "resources/user.ext.ts",
  "resources/user.schema.ts",
  "resources/user.type.ts",
  "traits/",
  "traits/timestampable.ext.ts",
  "traits/timestampable.schema.ts",
]
`;

exports[`migrate-to-schema batch operation > colocates type files with their corresponding schemas and traits > nested directory files 1`] = `
{
  "resources/": "__dir__",
  "resources/admin-model.type.ts": "
import type { Type } from '@warp-drive/core-types/symbols';
import type { WithLegacy } from '@ember-data/model/migration-support';

/**
 * This type represents the full set schema derived fields of
 * the 'admin-model' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link AdminModel} for fields + legacy mode features
 */
export interface AdminModelResource extends ConnectedTrait {
  readonly [Type]: 'admin-model';
  id: string | null;
  adminName: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'admin-model' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link AdminModelResource} for fields + legacy mode features
 */
export interface AdminModel extends WithLegacy<AdminModelResource> {}
",
  "resources/admin/": "__dir__",
  "resources/admin/admin-model.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const AdminModelSchema = {
  'type': 'admin-model',
  'legacy': true,
  'identity': {
    'kind': '@id',
    'name': 'id'
  },
  'fields': [
    {
      'kind': 'attribute',
      'name': 'adminName',
      'type': 'string'
    }
  ],
  'traits': [
    'connected'
  ]
} satisfies LegacyResourceSchema;

export default AdminModelSchema;
",
  "resources/admin/nested-model.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const NestedModelSchema = {
  'type': 'nested-model',
  'legacy': true,
  'identity': {
    'kind': '@id',
    'name': 'id'
  },
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    }
  ]
} satisfies LegacyResourceSchema;

export default NestedModelSchema;
",
  "resources/nested-model.type.ts": "
import type { Type } from '@warp-drive/core-types/symbols';
import type { WithLegacy } from '@ember-data/model/migration-support';

/**
 * This type represents the full set schema derived fields of
 * the 'nested-model' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link NestedModel} for fields + legacy mode features
 */
export interface NestedModelResource {
  readonly [Type]: 'nested-model';
  id: string | null;
  name: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'nested-model' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link NestedModelResource} for fields + legacy mode features
 */
export interface NestedModel extends WithLegacy<NestedModelResource> {}
",
  "traits/": "__dir__",
  "traits/admin/": "__dir__",
  "traits/admin/connected.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const ConnectedTraitSchema = {
  'name': 'connected',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'commonField',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
} satisfies LegacyResourceSchema;

export default ConnectedTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'connected' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link Connected} for fields + legacy mode features
 */
export interface ConnectedTrait {
  commonField?: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'connected' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link ConnectedTrait} for fields + legacy mode features
 */
export interface Connected extends WithLegacy<ConnectedTrait> {}
",
}
`;

exports[`migrate-to-schema batch operation > colocates type files with their corresponding schemas and traits > nested directory structure 1`] = `
[
  "resources/",
  "resources/admin/",
  "resources/admin/admin-model.schema.ts",
  "resources/admin/nested-model.schema.ts",
  "resources/admin-model.type.ts",
  "resources/nested-model.type.ts",
  "traits/",
  "traits/admin/",
  "traits/admin/connected.schema.ts",
]
`;

exports[`migrate-to-schema batch operation > combineSchemasAndTypes=true > generates combined artifacts with mixins, belongsTo, hasMany, and extensions > combined with mixins file structure 1`] = `
[
  "resources/",
  "resources/user.ext.ts",
  "resources/user.schema.ts",
  "traits/",
  "traits/timestampable.ext.ts",
  "traits/timestampable.schema.ts",
]
`;

exports[`migrate-to-schema batch operation > combineSchemasAndTypes=true > generates combined artifacts with mixins, belongsTo, hasMany, and extensions > combined with mixins files 1`] = `
{
  "resources/": "__dir__",
  "resources/user.ext.ts": "
import Timestampable from '../../mixins/timestampable';
import type { User } from './user.schema.ts';

// @ts-ignore-error in reality fields are not merged, they are overridden
export interface UserExtension extends User {}
export class UserExtension extends Timestampable {
  get displayName() {
      return this.name || this.email;
    }

  async updateProfile(data) {
      this.setProperties(data);
      return this.save();
    }
}

export default UserExtension;",
  "resources/user.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

import type { Type } from '@warp-drive/core-types/symbols';
import type { WithLegacy } from '@ember-data/model/migration-support';
import type { Company } from 'test-app/data/resources/company.schema';
import type { Project } from 'test-app/data/resources/project.schema';

const UserSchema = {
  'type': 'user',
  'legacy': true,
  'identity': {
    'kind': '@id',
    'name': 'id'
  },
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    },
    {
      'kind': 'attribute',
      'name': 'email',
      'type': 'string'
    },
    {
      'kind': 'belongsTo',
      'name': 'company',
      'type': 'company',
      'options': {
        'async': false
      }
    },
    {
      'kind': 'hasMany',
      'name': 'projects',
      'type': 'project',
      'options': {
        'async': true
      }
    }
  ],
  'traits': [
    'timestampable'
  ],
  'objectExtensions': [
    'TimestampableTraitExtension'
  ]
} satisfies LegacyResourceSchema;

export default UserSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link User} for fields + legacy mode features
 */
export interface UserResource extends TimestampableTrait {
  readonly [Type]: 'user';
  id: string | null;
  name: string;
  email: string;
  company: Company;
  projects: Project[];
}

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link UserResource} for fields + legacy mode features
 */
export interface User extends WithLegacy<UserResource> {}
",
  "traits/": "__dir__",
  "traits/timestampable.ext.ts": "




import type { Timestampable } from 'test-app/data/traits/timestampable.schema';

export interface TimestampableTraitExtension extends Timestampable {}

export const TimestampableTraitExtension = {
  timeSince() {
    return Date.now() - this.updatedAt;
  }
};",
  "traits/timestampable.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

import type { DeleteableTrait } from 'test-app/data/traits/deleteable.schema';

const TimestampableTraitSchema = {
  'name': 'timestampable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'createdAt',
      'kind': 'attribute',
      'type': 'date'
    },
    {
      'name': 'updatedAt',
      'kind': 'attribute',
      'type': 'date'
    }
  ],
  'traits': [
    'deleteable'
  ]
} satisfies LegacyResourceSchema;

export default TimestampableTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'timestampable' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link Timestampable} for fields + legacy mode features
 */
export interface TimestampableTrait extends DeleteableTrait {
  createdAt?: Date | null;
  updatedAt?: Date | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'timestampable' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link TimestampableTrait} for fields + legacy mode features
 */
export interface Timestampable extends WithLegacy<TimestampableTrait> {}
",
}
`;

exports[`migrate-to-schema batch operation > creates output directories if they do not exist > generated file structure 1`] = `
[
  "resources/",
  "resources/user.ext.ts",
  "resources/user.schema.ts",
  "resources/user.type.ts",
  "traits/",
]
`;

exports[`migrate-to-schema batch operation > detects mixins referenced via type-only imports > type-only import file structure 1`] = `
[
  "resources/",
  "resources/audit-log.schema.ts",
  "resources/audit-log.type.ts",
  "resources/audited-record.schema.ts",
  "resources/audited-record.type.ts",
  "traits/",
  "traits/auditable.schema.ts",
]
`;

exports[`migrate-to-schema batch operation > detects mixins referenced via type-only imports > type-only import files 1`] = `
{
  "resources/": "__dir__",
  "resources/audit-log.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const AuditLogSchema = {
  'type': 'audit-log',
  'legacy': true,
  'identity': {
    'kind': '@id',
    'name': 'id'
  },
  'fields': [
    {
      'kind': 'attribute',
      'name': 'action',
      'type': 'string'
    }
  ],
  'traits': [
    'auditable'
  ]
} satisfies LegacyResourceSchema;

export default AuditLogSchema;
",
  "resources/audit-log.type.ts": "
import type { Type } from '@warp-drive/core-types/symbols';
import type { WithLegacy } from '@ember-data/model/migration-support';

/**
 * This type represents the full set schema derived fields of
 * the 'audit-log' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link AuditLog} for fields + legacy mode features
 */
export interface AuditLogResource extends AuditableTrait {
  readonly [Type]: 'audit-log';
  id: string | null;
  action: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'audit-log' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link AuditLogResource} for fields + legacy mode features
 */
export interface AuditLog extends WithLegacy<AuditLogResource> {}
",
  "resources/audited-record.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const AuditedRecordSchema = {
  'type': 'audited-record',
  'legacy': true,
  'identity': {
    'kind': '@id',
    'name': 'id'
  },
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    },
    {
      'kind': 'belongsTo',
      'name': 'user',
      'type': 'user',
      'options': {
        'async': false
      }
    }
  ]
} satisfies LegacyResourceSchema;

export default AuditedRecordSchema;
",
  "resources/audited-record.type.ts": "
import type { Type } from '@warp-drive/core-types/symbols';
import type { WithLegacy } from '@ember-data/model/migration-support';
import type { User } from 'test-app/data/resources/user.type';

/**
 * This type represents the full set schema derived fields of
 * the 'audited-record' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link AuditedRecord} for fields + legacy mode features
 */
export interface AuditedRecordResource {
  readonly [Type]: 'audited-record';
  id: string | null;
  name: string | null;
  user: User | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'audited-record' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link AuditedRecordResource} for fields + legacy mode features
 */
export interface AuditedRecord extends WithLegacy<AuditedRecordResource> {}
",
  "traits/": "__dir__",
  "traits/auditable.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const AuditableTraitSchema = {
  'name': 'auditable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'auditStatus',
      'kind': 'attribute',
      'type': 'string'
    },
    {
      'name': 'auditDate',
      'kind': 'attribute',
      'type': 'date'
    }
  ]
} satisfies LegacyResourceSchema;

export default AuditableTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'auditable' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link Auditable} for fields + legacy mode features
 */
export interface AuditableTrait {
  auditStatus?: string | null;
  auditDate?: Date | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'auditable' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link AuditableTrait} for fields + legacy mode features
 */
export interface Auditable extends WithLegacy<AuditableTrait> {}
",
}
`;

exports[`migrate-to-schema batch operation > does not put type files in the default fallback directory > app directory structure 1`] = `
[
  "data/",
  "data/resources/",
  "data/resources/user.schema.ts",
  "data/resources/user.type.ts",
  "data/traits/",
  "models/",
  "models/user.ts",
]
`;

exports[`migrate-to-schema batch operation > dynamically detects traits vs resources for import paths > traits vs resources file structure 1`] = `
[
  "resources/",
  "resources/test-model.schema.ts",
  "resources/test-model.type.ts",
  "resources/user.schema.ts",
  "resources/user.type.ts",
  "traits/",
  "traits/workstreamable.schema.ts",
]
`;

exports[`migrate-to-schema batch operation > dynamically detects traits vs resources for import paths > traits vs resources files 1`] = `
{
  "resources/": "__dir__",
  "resources/test-model.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const TestModelSchema = {
  'type': 'test-model',
  'legacy': true,
  'identity': {
    'kind': '@id',
    'name': 'id'
  },
  'fields': [
    {
      'kind': 'belongsTo',
      'name': 'user',
      'type': 'user',
      'options': {
        'async': false
      }
    },
    {
      'kind': 'belongsTo',
      'name': 'workstreamable',
      'type': 'workstreamable',
      'options': {
        'async': false
      }
    }
  ],
  'traits': [
    'workstreamable'
  ]
} satisfies LegacyResourceSchema;

export default TestModelSchema;
",
  "resources/test-model.type.ts": "
import type { Type } from '@warp-drive/core-types/symbols';
import type { WithLegacy } from '@ember-data/model/migration-support';
import type { User } from 'test-app/data/resources/user.type';
import type { WorkstreamableTrait as Workstreamable } from 'test-app/data/traits/workstreamable.schema';

/**
 * This type represents the full set schema derived fields of
 * the 'test-model' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link TestModel} for fields + legacy mode features
 */
export interface TestModelResource extends WorkstreamableTrait {
  readonly [Type]: 'test-model';
  id: string | null;

  /**
   * // This should be imported from resources (regular model)
   */
  user: User | null;

  /**
   * // This should be imported from traits (exists as trait)
   */
  workstreamable: Workstreamable | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'test-model' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link TestModelResource} for fields + legacy mode features
 */
export interface TestModel extends WithLegacy<TestModelResource> {}
",
  "resources/user.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const UserSchema = {
  'type': 'user',
  'legacy': true,
  'identity': {
    'kind': '@id',
    'name': 'id'
  },
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    }
  ]
} satisfies LegacyResourceSchema;

export default UserSchema;
",
  "resources/user.type.ts": "
import type { Type } from '@warp-drive/core-types/symbols';
import type { WithLegacy } from '@ember-data/model/migration-support';

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link User} for fields + legacy mode features
 */
export interface UserResource {
  readonly [Type]: 'user';
  id: string | null;
  name: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link UserResource} for fields + legacy mode features
 */
export interface User extends WithLegacy<UserResource> {}
",
  "traits/": "__dir__",
  "traits/workstreamable.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const WorkstreamableTraitSchema = {
  'name': 'workstreamable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'workstreamType',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
} satisfies LegacyResourceSchema;

export default WorkstreamableTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'workstreamable' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link Workstreamable} for fields + legacy mode features
 */
export interface WorkstreamableTrait {
  workstreamType?: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'workstreamable' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link WorkstreamableTrait} for fields + legacy mode features
 */
export interface Workstreamable extends WithLegacy<WorkstreamableTrait> {}
",
}
`;

exports[`migrate-to-schema batch operation > ensures resources and traits include .schema with matching suffixes > schema naming file structure 1`] = `
[
  "resources/",
  "resources/js-test-model.ext.js",
  "resources/js-test-model.schema.ts",
  "resources/js-test-model.type.ts",
  "resources/ts-test-model.schema.ts",
  "resources/ts-test-model.type.ts",
  "traits/",
  "traits/test-mixin.ext.ts",
  "traits/test-mixin.schema.ts",
]
`;

exports[`migrate-to-schema batch operation > ensures schema files match source extension and type files are always .ts > mixed extensions file structure 1`] = `
[
  "resources/",
  "resources/js-model.schema.ts",
  "resources/js-model.type.ts",
  "resources/ts-model.schema.ts",
  "resources/ts-model.type.ts",
  "traits/",
]
`;

exports[`migrate-to-schema batch operation > ensures type files are always .ts regardless of source file extension > type files extension structure 1`] = `
[
  "resources/",
  "resources/js-model.schema.ts",
  "resources/js-model.type.ts",
  "resources/ts-model.schema.ts",
  "resources/ts-model.type.ts",
  "traits/",
]
`;

exports[`migrate-to-schema batch operation > generates multiple artifacts when processing multiple files > generated file structure 1`] = `
[
  "resources/",
  "resources/company.ext.ts",
  "resources/company.schema.ts",
  "resources/company.type.ts",
  "resources/user.schema.ts",
  "resources/user.type.ts",
  "traits/",
]
`;

exports[`migrate-to-schema batch operation > generates multiple artifacts when processing multiple files > generated files 1`] = `
{
  "resources/": "__dir__",
  "resources/company.ext.ts": "
import type { Company } from './company.type.ts';


// @ts-ignore-error in reality fields are not merged, they are overridden
export interface CompanyExtension extends Company {}
export class CompanyExtension {
  get userCount() {
      return this.users.length;
    }
}

export default CompanyExtension;",
  "resources/company.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const CompanySchema = {
  'type': 'company',
  'legacy': true,
  'identity': {
    'kind': '@id',
    'name': 'id'
  },
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    },
    {
      'kind': 'hasMany',
      'name': 'users',
      'type': 'user',
      'options': {
        'async': false,
        'inverse': 'company'
      }
    }
  ]
} satisfies LegacyResourceSchema;

export default CompanySchema;
",
  "resources/company.type.ts": "
import type { Type } from '@warp-drive/core-types/symbols';
import type { WithLegacy } from '@ember-data/model/migration-support';
import type { HasMany } from '@ember-data/model';
import type { User } from 'test-app/data/resources/user.type';

/**
 * This type represents the full set schema derived fields of
 * the 'company' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link Company} for fields + legacy mode features
 */
export interface CompanyResource {
  readonly [Type]: 'company';
  id: string | null;
  name: string | null;
  users: HasMany<User>;
}

/**
 * This type represents the full set schema derived fields of
 * the 'company' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link CompanyResource} for fields + legacy mode features
 */
export interface Company extends WithLegacy<CompanyResource> {}
",
  "resources/user.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const UserSchema = {
  'type': 'user',
  'legacy': true,
  'identity': {
    'kind': '@id',
    'name': 'id'
  },
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    },
    {
      'kind': 'attribute',
      'name': 'email',
      'type': 'string'
    }
  ]
} satisfies LegacyResourceSchema;

export default UserSchema;
",
  "resources/user.type.ts": "
import type { Type } from '@warp-drive/core-types/symbols';
import type { WithLegacy } from '@ember-data/model/migration-support';

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link User} for fields + legacy mode features
 */
export interface UserResource {
  readonly [Type]: 'user';
  id: string | null;
  name: string | null;
  email: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link UserResource} for fields + legacy mode features
 */
export interface User extends WithLegacy<UserResource> {}
",
  "traits/": "__dir__",
}
`;

exports[`migrate-to-schema batch operation > generates schema and type artifacts for models > generated file structure 1`] = `
[
  "resources/",
  "resources/user.ext.ts",
  "resources/user.schema.ts",
  "resources/user.type.ts",
  "traits/",
]
`;

exports[`migrate-to-schema batch operation > generates schema and type artifacts for models > generated files 1`] = `
{
  "resources/": "__dir__",
  "resources/user.ext.ts": "
import type { User } from './user.type.ts';


// @ts-ignore-error in reality fields are not merged, they are overridden
export interface UserExtension extends User {}
export class UserExtension {
  // Extension property
  get displayName() {
      return this.name || this.email;
    }
}

export default UserExtension;",
  "resources/user.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const UserSchema = {
  'type': 'user',
  'legacy': true,
  'identity': {
    'kind': '@id',
    'name': 'id'
  },
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    },
    {
      'kind': 'attribute',
      'name': 'email',
      'type': 'string'
    },
    {
      'kind': 'belongsTo',
      'name': 'company',
      'type': 'company',
      'options': {
        'async': false
      }
    }
  ]
} satisfies LegacyResourceSchema;

export default UserSchema;
",
  "resources/user.type.ts": "
import type { Type } from '@warp-drive/core-types/symbols';
import type { WithLegacy } from '@ember-data/model/migration-support';
import type { Company } from 'test-app/data/resources/company.type';

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link User} for fields + legacy mode features
 */
export interface UserResource {
  readonly [Type]: 'user';
  id: string | null;
  name: string | null;
  email: string | null;
  company: Company | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link UserResource} for fields + legacy mode features
 */
export interface User extends WithLegacy<UserResource> {}
",
  "traits/": "__dir__",
}
`;

exports[`migrate-to-schema batch operation > handles external mixin imports from additionalMixinSources > external mixins file structure 1`] = `
[
  "resources/",
  "resources/test-model.schema.ts",
  "resources/test-model.type.ts",
  "traits/",
  "traits/external-mixin.schema.ts",
  "traits/local-mixin.schema.ts",
]
`;

exports[`migrate-to-schema batch operation > handles external mixin imports from additionalMixinSources > external mixins files 1`] = `
{
  "resources/": "__dir__",
  "resources/test-model.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const TestModelSchema = {
  'type': 'test-model',
  'legacy': true,
  'identity': {
    'kind': '@id',
    'name': 'id'
  },
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    }
  ],
  'traits': [
    'external',
    'local'
  ]
} satisfies LegacyResourceSchema;

export default TestModelSchema;
",
  "resources/test-model.type.ts": "
import type { Type } from '@warp-drive/core-types/symbols';
import type { WithLegacy } from '@ember-data/model/migration-support';

/**
 * This type represents the full set schema derived fields of
 * the 'test-model' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link TestModel} for fields + legacy mode features
 */
export interface TestModelResource extends ExternalTrait, LocalTrait {
  readonly [Type]: 'test-model';
  id: string | null;
  name: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'test-model' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link TestModelResource} for fields + legacy mode features
 */
export interface TestModel extends WithLegacy<TestModelResource> {}
",
  "traits/": "__dir__",
  "traits/external-mixin.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const ExternalMixinTraitSchema = {
  'name': 'external-mixin',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'externalField',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
} satisfies LegacyResourceSchema;

export default ExternalMixinTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'external-mixin' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link ExternalMixin} for fields + legacy mode features
 */
export interface ExternalMixinTrait {
  externalField?: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'external-mixin' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link ExternalMixinTrait} for fields + legacy mode features
 */
export interface ExternalMixin extends WithLegacy<ExternalMixinTrait> {}
",
  "traits/local-mixin.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const LocalMixinTraitSchema = {
  'name': 'local-mixin',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'localField',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
} satisfies LegacyResourceSchema;

export default LocalMixinTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'local-mixin' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link LocalMixin} for fields + legacy mode features
 */
export interface LocalMixinTrait {
  localField?: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'local-mixin' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link LocalMixinTrait} for fields + legacy mode features
 */
export interface LocalMixin extends WithLegacy<LocalMixinTrait> {}
",
}
`;

exports[`migrate-to-schema batch operation > handles mixed js and ts files correctly with proper type file extensions > mixed js/ts file structure 1`] = `
[
  "resources/",
  "resources/js-model-with-mixin.ext.js",
  "resources/js-model-with-mixin.schema.ts",
  "resources/js-model-with-mixin.type.ts",
  "resources/ts-model-with-mixin.schema.ts",
  "resources/ts-model-with-mixin.type.ts",
  "traits/",
  "traits/js-mixin.schema.ts",
  "traits/ts-mixin.ext.ts",
  "traits/ts-mixin.schema.ts",
]
`;

exports[`migrate-to-schema batch operation > handles mixed js and ts files correctly with proper type file extensions > mixed js/ts files 1`] = `
{
  "resources/": "__dir__",
  "resources/js-model-with-mixin.ext.js": "
import JsMixin from '../../mixins/js-mixin';

export class JsModelWithMixinExtension extends JsMixin {
  get displayName() {
      return this.name + ' (JS)';
    }
}

export default JsModelWithMixinExtension;",
  "resources/js-model-with-mixin.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const JsModelWithMixinSchema = {
  'type': 'js-model-with-mixin',
  'legacy': true,
  'identity': {
    'kind': '@id',
    'name': 'id'
  },
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    }
  ],
  'traits': [
    'js'
  ]
} satisfies LegacyResourceSchema;

export default JsModelWithMixinSchema;
",
  "resources/js-model-with-mixin.type.ts": "
import type { Type } from '@warp-drive/core-types/symbols';
import type { WithLegacy } from '@ember-data/model/migration-support';

/**
 * This type represents the full set schema derived fields of
 * the 'js-model-with-mixin' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link JsModelWithMixin} for fields + legacy mode features
 */
export interface JsModelWithMixinResource extends JsTrait {
  readonly [Type]: 'js-model-with-mixin';
  id: string | null;
  name: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'js-model-with-mixin' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link JsModelWithMixinResource} for fields + legacy mode features
 */
export interface JsModelWithMixin extends WithLegacy<JsModelWithMixinResource> {}
",
  "resources/ts-model-with-mixin.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const TsModelWithMixinSchema = {
  'type': 'ts-model-with-mixin',
  'legacy': true,
  'identity': {
    'kind': '@id',
    'name': 'id'
  },
  'fields': [
    {
      'kind': 'attribute',
      'name': 'title',
      'type': 'string'
    }
  ],
  'traits': [
    'ts'
  ],
  'objectExtensions': [
    'TsMixinTraitExtension'
  ]
} satisfies LegacyResourceSchema;

export default TsModelWithMixinSchema;
",
  "resources/ts-model-with-mixin.type.ts": "
import type { Type } from '@warp-drive/core-types/symbols';
import type { WithLegacy } from '@ember-data/model/migration-support';

/**
 * This type represents the full set schema derived fields of
 * the 'ts-model-with-mixin' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link TsModelWithMixin} for fields + legacy mode features
 */
export interface TsModelWithMixinResource extends TsTrait {
  readonly [Type]: 'ts-model-with-mixin';
  id: string | null;
  title: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'ts-model-with-mixin' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link TsModelWithMixinResource} for fields + legacy mode features
 */
export interface TsModelWithMixin extends WithLegacy<TsModelWithMixinResource> {}
",
  "traits/": "__dir__",
  "traits/js-mixin.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const JsMixinTraitSchema = {
  'name': 'js-mixin',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'createdAt',
      'kind': 'attribute',
      'type': 'date'
    }
  ]
} satisfies LegacyResourceSchema;

export default JsMixinTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'js-mixin' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link JsMixin} for fields + legacy mode features
 */
export interface JsMixinTrait {
  createdAt?: Date | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'js-mixin' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link JsMixinTrait} for fields + legacy mode features
 */
export interface JsMixin extends WithLegacy<JsMixinTrait> {}
",
  "traits/ts-mixin.ext.ts": "



import type { TsMixin } from 'test-app/data/traits/ts-mixin.schema';

export interface TsMixinTraitExtension extends TsMixin {}

export const TsMixinTraitExtension = {
  toggleEnabled() {
    this.set('isEnabled', !this.isEnabled);
  }
};",
  "traits/ts-mixin.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const TsMixinTraitSchema = {
  'name': 'ts-mixin',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'isEnabled',
      'kind': 'attribute',
      'type': 'boolean'
    }
  ]
} satisfies LegacyResourceSchema;

export default TsMixinTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'ts-mixin' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link TsMixin} for fields + legacy mode features
 */
export interface TsMixinTrait {
  isEnabled?: boolean | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'ts-mixin' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link TsMixinTrait} for fields + legacy mode features
 */
export interface TsMixin extends WithLegacy<TsMixinTrait> {}
",
}
`;

exports[`migrate-to-schema batch operation > mixin with attributes only is ONLY referenced as a trait in a schema > contains_only_a_trait 1`] = `
{
  "resources/": "__dir__",
  "resources/test-model.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const TestModelSchema = {
  'type': 'test-model',
  'legacy': true,
  'identity': {
    'kind': '@id',
    'name': 'id'
  },
  'fields': [
    {
      'kind': 'belongsTo',
      'name': 'user',
      'type': 'user',
      'options': {
        'async': false
      }
    },
    {
      'kind': 'belongsTo',
      'name': 'workstreamable',
      'type': 'workstreamable',
      'options': {
        'async': false
      }
    }
  ],
  'traits': [
    'workstreamable'
  ]
} satisfies LegacyResourceSchema;

export default TestModelSchema;
",
  "resources/test-model.type.ts": "
import type { Type } from '@warp-drive/core-types/symbols';
import type { WithLegacy } from '@ember-data/model/migration-support';
import type { User } from 'test-app/data/resources/user.type';
import type { WorkstreamableTrait as Workstreamable } from 'test-app/data/traits/workstreamable.schema';

/**
 * This type represents the full set schema derived fields of
 * the 'test-model' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link TestModel} for fields + legacy mode features
 */
export interface TestModelResource extends WorkstreamableTrait {
  readonly [Type]: 'test-model';
  id: string | null;

  /**
   * // This should be imported from resources (regular model)
   */
  user: User | null;

  /**
   * // This should be imported from traits (exists as trait)
   */
  workstreamable: Workstreamable | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'test-model' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link TestModelResource} for fields + legacy mode features
 */
export interface TestModel extends WithLegacy<TestModelResource> {}
",
  "resources/user.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const UserSchema = {
  'type': 'user',
  'legacy': true,
  'identity': {
    'kind': '@id',
    'name': 'id'
  },
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    }
  ]
} satisfies LegacyResourceSchema;

export default UserSchema;
",
  "resources/user.type.ts": "
import type { Type } from '@warp-drive/core-types/symbols';
import type { WithLegacy } from '@ember-data/model/migration-support';

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link User} for fields + legacy mode features
 */
export interface UserResource {
  readonly [Type]: 'user';
  id: string | null;
  name: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link UserResource} for fields + legacy mode features
 */
export interface User extends WithLegacy<UserResource> {}
",
  "traits/": "__dir__",
  "traits/workstreamable.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const WorkstreamableTraitSchema = {
  'name': 'workstreamable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'workstreamType',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
} satisfies LegacyResourceSchema;

export default WorkstreamableTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'workstreamable' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link Workstreamable} for fields + legacy mode features
 */
export interface WorkstreamableTrait {
  workstreamType?: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'workstreamable' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link WorkstreamableTrait} for fields + legacy mode features
 */
export interface Workstreamable extends WithLegacy<WorkstreamableTrait> {}
",
}
`;

exports[`migrate-to-schema batch operation > mixin with both attributes and methods only is referenced as a trait and an objectExtension > contains_both_extension_and_a_trait 1`] = `
{
  "resources/": "__dir__",
  "resources/test-model.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const TestModelSchema = {
  'type': 'test-model',
  'legacy': true,
  'identity': {
    'kind': '@id',
    'name': 'id'
  },
  'fields': [
    {
      'kind': 'belongsTo',
      'name': 'user',
      'type': 'user',
      'options': {
        'async': false
      }
    },
    {
      'kind': 'belongsTo',
      'name': 'workstreamable',
      'type': 'workstreamable',
      'options': {
        'async': false
      }
    }
  ],
  'traits': [
    'workstreamable'
  ],
  'objectExtensions': [
    'WorkstreamableTraitExtension'
  ]
} satisfies LegacyResourceSchema;

export default TestModelSchema;
",
  "resources/test-model.type.ts": "
import type { Type } from '@warp-drive/core-types/symbols';
import type { WithLegacy } from '@ember-data/model/migration-support';
import type { User } from 'test-app/data/resources/user.type';
import type { WorkstreamableTrait as Workstreamable } from 'test-app/data/traits/workstreamable.schema';

/**
 * This type represents the full set schema derived fields of
 * the 'test-model' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link TestModel} for fields + legacy mode features
 */
export interface TestModelResource extends WorkstreamableTrait {
  readonly [Type]: 'test-model';
  id: string | null;

  /**
   * // This should be imported from resources (regular model)
   */
  user: User | null;

  /**
   * // This should be imported from traits (exists as trait)
   */
  workstreamable: Workstreamable | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'test-model' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link TestModelResource} for fields + legacy mode features
 */
export interface TestModel extends WithLegacy<TestModelResource> {}
",
  "resources/user.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const UserSchema = {
  'type': 'user',
  'legacy': true,
  'identity': {
    'kind': '@id',
    'name': 'id'
  },
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    }
  ]
} satisfies LegacyResourceSchema;

export default UserSchema;
",
  "resources/user.type.ts": "
import type { Type } from '@warp-drive/core-types/symbols';
import type { WithLegacy } from '@ember-data/model/migration-support';

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link User} for fields + legacy mode features
 */
export interface UserResource {
  readonly [Type]: 'user';
  id: string | null;
  name: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'user' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link UserResource} for fields + legacy mode features
 */
export interface User extends WithLegacy<UserResource> {}
",
  "traits/": "__dir__",
  "traits/workstreamable.ext.ts": "



import type { Workstreamable } from 'test-app/data/traits/workstreamable.schema';

export interface WorkstreamableTraitExtension extends Workstreamable {}

export const WorkstreamableTraitExtension = {
  imAnObjectExtensionNow() {}
};",
  "traits/workstreamable.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const WorkstreamableTraitSchema = {
  'name': 'workstreamable',
  'mode': 'legacy',
  'fields': [
    {
      'name': 'workstreamType',
      'kind': 'attribute',
      'type': 'string'
    }
  ]
} satisfies LegacyResourceSchema;

export default WorkstreamableTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'workstreamable' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link Workstreamable} for fields + legacy mode features
 */
export interface WorkstreamableTrait {
  workstreamType?: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'workstreamable' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link WorkstreamableTrait} for fields + legacy mode features
 */
export interface Workstreamable extends WithLegacy<WorkstreamableTrait> {}
",
}
`;

exports[`migrate-to-schema batch operation > places intermediate model extensions in extensionsDir not fallback directory > intermediate model extensions app structure 1`] = `
[
  "core/",
  "core/base-model-with-methods.ts",
  "data/",
  "data/resources/",
  "data/resources/regular-model.schema.ts",
  "data/resources/regular-model.type.ts",
  "data/traits/",
  "data/traits/base-model-with-methods.ext.ts",
  "data/traits/base-model-with-methods.schema.ts",
  "models/",
  "models/regular-model.ts",
]
`;

exports[`migrate-to-schema batch operation > places intermediate model extensions in extensionsDir not fallback directory > intermediate model extensions files 1`] = `
{
  "resources/": "__dir__",
  "resources/regular-model.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const RegularModelSchema = {
  'type': 'fragment:regular-model',
  'legacy': true,
  'identity': null,
  'fields': [],
  'objectExtensions': [
    'ember-object',
    'fragment'
  ]
} satisfies LegacyResourceSchema;

export default RegularModelSchema;
",
  "resources/regular-model.type.ts": "
import type { Type } from '@warp-drive/core-types/symbols';
import type { WithLegacy } from '@ember-data/model/migration-support';

/**
 * This type represents the full set schema derived fields of
 * the 'regular-model' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link RegularModel} for fields + legacy mode features
 */
export interface RegularModelResource {
  readonly [Type]: 'regular-model';
  id: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'regular-model' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link RegularModelResource} for fields + legacy mode features
 */
export interface RegularModel extends WithLegacy<RegularModelResource> {}
",
  "traits/": "__dir__",
  "traits/base-model-with-methods.ext.ts": "
import Model, { attr } from '@ember-data/model';

export default class BaseModelWithMethods extends Model {
  @attr('string') baseField;

  // This should create an extension artifact
  get computedValue() {
    return this.baseField + ' computed';
  }

  someMethod() {
    return 'from base model';
  }
}

import type { BaseModelWithMethods } from 'test-app/data/traits/base-model-with-methods.schema';

export interface BaseModelWithMethodsTraitExtension extends BaseModelWithMethods {}

export class BaseModelWithMethodsTraitExtension {
  // This should create an extension artifact
  get computedValue() {
      return this.baseField + ' computed';
    }

  someMethod() {
      return 'from base model';
    }
}

export default BaseModelWithMethodsTraitExtension;",
  "traits/base-model-with-methods.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

import type { BelongsToReference, HasManyReference, Errors } from '@warp-drive/legacy/model/-private';

const BaseModelWithMethodsTraitSchema = {
  'fields': [
    {
      'kind': 'attribute',
      'name': 'baseField',
      'type': 'string'
    }
  ]
} satisfies LegacyResourceSchema;

export default BaseModelWithMethodsTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'base-model-with-methods' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link BaseModelWithMethods} for fields + legacy mode features
 */
export interface BaseModelWithMethodsTrait {
  id: string | null;
  baseField: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'base-model-with-methods' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link BaseModelWithMethodsTrait} for fields + legacy mode features
 */
export interface BaseModelWithMethods extends WithLegacy<BaseModelWithMethodsTrait> {}
",
}
`;

exports[`migrate-to-schema batch operation > processes intermediateModelPaths to generate traits from base model classes > intermediate models file structure 1`] = `
[
  "resources/",
  "resources/custom-select-option.schema.ts",
  "resources/custom-select-option.type.ts",
  "traits/",
  "traits/base.schema.ts",
  "traits/data-field.schema.ts",
]
`;

exports[`migrate-to-schema batch operation > processes intermediateModelPaths to generate traits from base model classes > intermediate models resources 1`] = `
{
  "custom-select-option.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const CustomSelectOptionSchema = {
  'type': 'fragment:custom-select-option',
  'legacy': true,
  'identity': null,
  'fields': [],
  'objectExtensions': [
    'ember-object',
    'fragment'
  ]
} satisfies LegacyResourceSchema;

export default CustomSelectOptionSchema;
",
  "custom-select-option.type.ts": "
import type { Type } from '@warp-drive/core-types/symbols';
import type { WithLegacy } from '@ember-data/model/migration-support';

/**
 * This type represents the full set schema derived fields of
 * the 'custom-select-option' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link CustomSelectOption} for fields + legacy mode features
 */
export interface CustomSelectOptionResource {
  readonly [Type]: 'custom-select-option';
  id: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'custom-select-option' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link CustomSelectOptionResource} for fields + legacy mode features
 */
export interface CustomSelectOption extends WithLegacy<CustomSelectOptionResource> {}
",
}
`;

exports[`migrate-to-schema batch operation > processes intermediateModelPaths to generate traits from base model classes > intermediate models traits 1`] = `
{
  "base.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

import type { BelongsToReference, HasManyReference, Errors } from '@warp-drive/legacy/model/-private';

const BaseTraitSchema = {
  'fields': []
} satisfies LegacyResourceSchema;

export default BaseTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'base' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link Base} for fields + legacy mode features
 */
export interface BaseTrait {
  id: string | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'base' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link BaseTrait} for fields + legacy mode features
 */
export interface Base extends WithLegacy<BaseTrait> {}
",
  "data-field.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

import type { BelongsToReference, HasManyReference, Errors } from '@warp-drive/legacy/model/-private';

const DataFieldTraitSchema = {
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    },
    {
      'kind': 'attribute',
      'name': 'sortOrder',
      'type': 'number'
    }
  ],
  'traits': [
    'base-model'
  ]
} satisfies LegacyResourceSchema;

export default DataFieldTraitSchema;

/**
 * This type represents the full set schema derived fields of
 * the 'data-field' trait, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link DataField} for fields + legacy mode features
 */
export interface DataFieldTrait extends BaseModelTrait {
  id: string | null;
  name: string | null;
  sortOrder: number | null;
}

/**
 * This type represents the full set schema derived fields of
 * the 'data-field' trait, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link DataFieldTrait} for fields + legacy mode features
 */
export interface DataField extends WithLegacy<DataFieldTrait> {}
",
}
`;

exports[`migrate-to-schema batch operation > respects dryRun option and does not create files > dryRun file structure 1`] = `[]`;

exports[`migrate-to-schema batch operation > respects models-only and mixins-only options > models-only file structure 1`] = `
[
  "resources/",
  "resources/user.schema.ts",
  "resources/user.type.ts",
  "traits/",
]
`;

exports[`migrate-to-schema batch operation > skips mixin processing when no model-connected mixins are found > traits directory structure 1`] = `[]`;

exports[`migrate-to-schema batch operation > typed model with multiline declarations 1`] = `
{
  "resources/": "__dir__",
  "resources/typed.schema.ts": "
import type { LegacyResourceSchema } from '@warp-drive/core-types/schema/fields';

const TypedSchema = {
  'type': 'typed',
  'legacy': true,
  'identity': {
    'kind': '@id',
    'name': 'id'
  },
  'fields': [
    {
      'kind': 'attribute',
      'name': 'name',
      'type': 'string'
    },
    {
      'kind': 'belongsTo',
      'name': 'owner',
      'type': 'user',
      'options': {
        'async': false,
        'inverse': null
      }
    },
    {
      'kind': 'hasMany',
      'name': 'tags',
      'type': 'tag',
      'options': {
        'async': true,
        'inverse': null
      }
    }
  ]
} satisfies LegacyResourceSchema;

export default TypedSchema;
",
  "resources/typed.type.ts": "
import type { Type } from '@warp-drive/core-types/symbols';
import type { WithLegacy } from '@ember-data/model/migration-support';
import type { User } from 'test-app/data/resources/user.type';
import type { Tag } from 'test-app/data/resources/tag.type';

/**
 * This type represents the full set schema derived fields of
 * the 'typed' resource, without any of the legacy mode features
 * and without any extensions.
 *
 * > [!TIP]
 * > It is likely that you will want a more specific type tailored
 * > to the context of where some data has been loaded, for instance
 * > one that marks specific fields as readonly, or which only enables
 * > some fields to be null during create, or which only includes
 * > a subset of fields based on a specific API response.
 * >
 * > For those cases, you can create a more specific type that derives
 * > from this type to ensure that your type definitions stay consistent
 * > with the schema. For more details read about {@link https://warp-drive.io/api/@warp-drive/core/types/record/type-aliases/Mask | Masking}
 *
 * See also {@link Typed} for fields + legacy mode features
 */
export interface TypedResource {
  readonly [Type]: 'typed';
  id: string | null;
  name: string | null;
  owner: unknown;
  tags: unknown;
}

/**
 * This type represents the full set schema derived fields of
 * the 'typed' resource, including all legacy mode features but
 * without any extensions.
 *
 * See also {@link TypedResource} for fields + legacy mode features
 */
export interface Typed extends WithLegacy<TypedResource> {}
",
  "traits/": "__dir__",
}
`;
